--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="themetum Team" />
 	<!-- Favicon  -->
-  <link rel="shortcut icon" href="img/favicon.png">
+  <link rel="shortcut icon" href="img/petaverse.jpeg">
 	<!-- CSS File  -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -49,10 +49,10 @@
 					<div class="main-menu d-flex align-items-center">
 						<div class="logo"> <!-- start logo  -->
 							<a href="home" class="navbar-brand">
-								<img src="img/logo.png" alt="logo">
+								<img src="img/petaverselogo.png" alt="logo">
 							</a>
 							<a href="home" class="navbar-icon">
-								<img src="img/favicon.png" alt="logo">
+								<img src="img/petaverselogo.png" alt="logo">
 							</a>
 						</div> <!-- End logo  -->
 						<div class="input-main"> <!-- start search bar  -->
@@ -67,18 +67,18 @@
 									<li><a href="home">Home</a></li>
 									<li class="has-children"><a href="#">Explore</a>
 										<ul class="sub-menu">
-											<li><a href="live.html"> Live Auction</a></li>
-											<li><a href="collection.html"> Collection</a></li>
-											<li><a href="item-details.html">Item Details</a></li>
+											<li><a href="live"> Live Auction</a></li>
+											<li><a href="collection"> Collection</a></li>
+											<li><a href="item-details">Item Details</a></li>
 										</ul>
 									</li>
-									<li class="has-children"><a href="#">resources</a>
+									<li class="has-children"><a href="/">Resources</a>
 										<ul class="sub-menu">
-											<li><a href="faqs.html">Help Center</a></li>
-											<li><a href="blog.html">Partners</a></li>
+											<li><a href="faqs">Help Center</a></li>
+											<li><a href="partners">Partners</a></li>
 										</ul>
 									</li>
-									<li><a href="create.html">Create</a></li>
+									<li><a href="create">Create</a></li>
 								</ul> <!-- end ul  -->
 							</nav> <!-- end nav  -->
 						</div><!-- end menu  -->
