--- a/views/main.hbs
+++ b/views/main.hbs
@@ -9,172 +9,27 @@
 				<div class="col-md-6 col-sm-12 pb-30"> <!-- start col-6  -->
 					<div class="product_heading pt-200 ml-20 mt-20 text-left"><!-- start header left  -->						
 						<h2 class="product_page_subtitle font-bold wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s"> 
-							NFT Marketplace for pets<br /> Explore, Collect or Sell
+							Explore, Collect or Sell!!! <br /> NFT Marketplace for pets
 						</h2>
 						 <div class="header-description">
 							<p class="header-paragraph">
-								Connect <i class='bx bx-arrow-back'></i> 
-								Explore <i class='bx bx-arrow-back'></i>
-								Earn
+								Add transfarable values to your pets, trading them to earn for your time and effort
 							</p>
 						 </div><!-- end header description  -->
 						 <div class="header-btn-container wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s">
-							<a href="wallet.html" class="btn btn-wallet btn_all_nft_product">Add Wallet <i class='bx bx-arrow-back'></i> </a>
-							<a href="wallet.html" class="btn btn-wallet account_btn">Upload Art</a>
+							<a href="explores" class="btn btn-wallet btn_all_nft_product">Explore<i class='bx bx-arrow-back'></i> </a>
+							<a href="upload" class="btn btn-wallet account_btn">Upload Art</a>
 						 </div><!-- end header btn  -->
-						<div class="row"><!-- start row  -->
-							<div class="col-md-4"><!-- start col-4  -->
-								<div class="counter_area_header wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s"> 
-									<div class="counter-up header">
-										<div class="counter_heading">
-											<p class="count-text pt-10">Art Works</p>										
-											<div class="counter_text header">
-												<span class="counter-to" data-to="2597" data-speed="4000">2597</span>k
-											</div>
-										</div>										
-									</div>
-								</div>
-							</div><!-- end col-4  -->
-							<div class="col-md-4"><!-- start col-4  -->
-								<div class="counter_area_header wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"> 
-									<div class="counter-up header">
-										<div class="counter_heading">
-											<p class="count-text pt-10">Live Auction</p>										
-											<div class="counter_text header">
-												<span class="counter-to" data-to="997" data-speed="4000">997</span> Items
-											</div>
-										</div>										
-									</div>
-								</div>
-							</div><!-- end col-4  -->
-							<div class="col-md-4"><!-- start col-4  -->
-								<div class="counter_area_header wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s"> 
-									<div class="counter-up header">
-										<div class="counter_heading">
-											<p class="count-text pt-10">Creators Earning</p>										
-											<div class="counter_text header">
-												<span class="counter-to" data-to="342" data-speed="4000">342</span>M USD
-											</div>
-										</div>	
-									</div>
-								</div>
-							</div><!-- end col-4  -->
-						</div><!-- end row  -->
 					</div><!-- end header left  -->
 				</div> <!-- end col-6  -->
 				<div class="col-md-6 col-sm-12"> <!-- start col-6  -->
 					<div class="header-right wow fadeInRight" data-wow-duration="1s" data-wow-delay=".8s"> 
-						<img src="img/header-right.jpg" alt="" class="responsive-fluid" />
+						<img src="img/tibut1.jpg" alt="" class="responsive-fluid" />
 					</div>
 				</div> <!-- end col-7  -->
 			</div> <!-- end row  -->
 		</div> <!-- end container  -->
 	</div> <!-- end header banner  -->
-	<div class="browse_categories pt-80 pb-80"><!-- start category -->
-		<div class="container"><!-- start container -->
-			<div class="section_title">
-				<h4 class="section-subtitle wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Browse by category to choose your file. More than 4 Millions people love us without hesitation.</h4>
-			</div><!-- end section title -->
-			<div class="row"><!-- start row -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box1">
-						<span class="category_icon">
-							<i class='bx bx-image'></i>
-						</span>
-						<span class="category_title">Art Works</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box2">
-						<span class="category_icon">
-							<i class='bx bx-globe'></i>
-						</span>
-						<span class="category_title">Virtual World</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box3">
-						<span class="category_icon">
-							<i class='bx bx-dice-3'></i>
-						</span>
-						<span class="category_title">3D Art</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box4">
-						<span class="category_icon">
-							<i class='bx bx-book-content'></i>
-						</span>
-						<span class="category_title">Books</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box5">
-						<span class="category_icon">
-							<i class='bx bx-search' ></i>
-						</span>
-						<span class="category_title">Domains</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box6">
-						<span class="category_icon">
-							<i class='bx bxs-music' ></i>
-						</span>
-						<span class="category_title">Music</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box7">
-						<span class="category_icon">
-							<i class='bx bx-landscape' ></i>
-						</span>
-						<span class="category_title">Nature</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box8">
-						<span class="category_icon">
-							<i class='bx bx-arch'></i>
-						</span>
-						<span class="category_title">3D Modeling</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box9">
-						<span class="category_icon">
-							<i class='bx bx-bowling-ball' ></i>
-						</span>
-						<span class="category_title">Illustration</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box10">
-						<span class="category_icon">
-							<i class='bx bx-bolt-circle'></i>
-						</span>
-						<span class="category_title">Galaxy</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box11">
-						<span class="category_icon">
-							<i class='bx bxs-camera-plus' ></i>
-						</span>
-						<span class="category_title">Discovery</span>
-					</a>
-				</div><!-- end col-2 -->
-				<div class="col-md-2 col-sm-4 col-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s"><!-- start col-2 -->
-					<a href="explores.html" class="single_category category_box12">
-						<span class="category_icon">
-							<i class='bx bxs-file-gif'></i>
-						</span>
-						<span class="category_title">Animation</span>
-					</a>
-				</div><!-- end col-2 -->
-			</div><!-- end row -->
-		</div><!-- end container -->
-	</div><!-- end category -->
 	
 <!-- Start Modal Popup -->	
 
@@ -359,12 +214,12 @@
 				<div class="col-md-6 col-sm-12 pb-10"><!-- start col-6 -->
 					<div class="section_intro wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
 						<p class="section_top_title">Live Auction</p>
-						<h2 class="section_heading">NTFs Products</h2>
+						<h2 class="section_heading">Pet NFTs Products</h2>
 					</div>
 				</div><!-- end col-6 -->
 				<div class="col-md-6 col-sm-12"><!-- start col-6 -->
 					<div class="section_description">
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Explore on the world's best & largest NFT marketplace with our beautiful NFT products. We want to be a part of your smile, success and future growth. </p>
+						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Explore on the world's best NFT marketplace for pets with our beautiful NFT products. We want to be a part of your smile, success and future growth. </p>
 					</div>
 				</div><!-- end col-6 -->
 			</div><!-- end row -->
@@ -382,11 +237,7 @@
 								  <span class="seconds"></span>s
 								  </span>							  
 						    </div>
-						</div> <!-- end count down -->
-						<div class="profile-rating"> <!-- thumbsup rating -->
-							<i class='bx bx-heart'></i> 
-							<span class="thumbsup">9.3k</span>
-						</div> <!-- end thumbsup rating -->						
+						</div> <!-- end count down -->					
 						<div class="single_product_img"><!-- start single product img -->						
 							<a href="https://www.themetum.com/tf/etherino/etherino-light/product.html" class="theme_preview_link">
 								<img src="img/items/1.jpg" alt="" class="responsive-fluid" />						
@@ -467,11 +318,7 @@
 								  <span class="seconds"></span>s
 								  </span>							  
 						    </div>
-						</div> <!-- end count down -->
-						<div class="profile-rating"> <!-- thumbsup rating -->
-							<i class='bx bx-heart'></i> 
-							<span class="thumbsup">2.6k</span>
-						</div> <!-- end thumbsup rating -->						
+						</div> <!-- end count down -->					
 						<div class="single_product_img"><!-- start single product img -->						
 							<a href="https://www.themetum.com/tf/etherino/etherino-light/product.html" class="theme_preview_link">
 								<img src="img/items/2.jpg" alt="" class="responsive-fluid" />						
