--- a/views/main.hbs
+++ b/views/main.hbs
@@ -9,11 +9,14 @@
 				<div class="col-md-6 col-sm-12 pb-30"> <!-- start col-6  -->
 					<div class="product_heading pt-200 ml-20 mt-20 text-left"><!-- start header left  -->						
 						<h2 class="product_page_subtitle font-bold wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s"> 
-							Explore, Collect or Sell!!! <br /> NFT Marketplace for pets
+							Creator-centric <br /> #NFT Marketplace for PETS
 						</h2>
+						<h4 class="product_page_subtitle font-bold wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s">
+							Create, sell and collect extraordinary digital collectibles secured with blockchain 
+						</h4>
 						 <div class="header-description">
 							<p class="header-paragraph">
-								Add transfarable values to your pets, trading them to earn for your time and effort
+								Add transfarable values to your pets, trading them to earn for your time and effort.
 							</p>
 						 </div><!-- end header description  -->
 						 <div class="header-btn-container wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s">
