--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -69,7 +69,6 @@
 										<ul class="sub-menu">
 											<li><a href="live"> Live Auction</a></li>
 											<li><a href="collection"> Collection</a></li>
-											<li><a href="item-details">Item Details</a></li>
 										</ul>
 									</li>
 									<li class="has-children"><a href="/">Resources</a>
@@ -114,7 +113,7 @@
 											<a href="#" class="link-profile-a heading-SB">Edit Profile</a>
 										</li>
 										<li class="link-profile-li">
-											<a href="#" class="link-profile-a heading-SB">Upload File</a>
+											<a href="#" class="link-profile-a heading-SB">Upload Arts</a>
 										</li>
 										<li class="link-profile-li">
 											<a href="#" class="link-profile-a heading-SB">Logout</a>
@@ -140,25 +139,22 @@
 	<footer id="footer_area" class="footer_area_bg"> <!-- start footer area -->
 		<div class="container"> <!-- start container -->
 			<div class="row"> <!-- start row -->
-				<div class="col-md-3 col-sm-6"> <!-- start col-3 -->
+				<div class="col-md-4 col-sm-6"> <!-- start col-3 -->
 					<div class="footer_widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
 						<div class="widget_title">
 							<h6>Company</h6>
 						</div>
 						<div class="widget_nav_link">
 							<ul class="footer_nav">
-								<li><a href="about.html">About</a></li>
-								<li><a href="https://www.themetum.com/tf/etherino/etherino-light/testimonial.html">Testimonials</a></li>
-								<li><a href="contact.html">Contact Us</a></li>
-								<li><a href="collection.html">Collection</a></li>
+								<li><a href="/about">About</a></li>
+								<li><a href="/testimonials">Testimonials</a></li>
+								<li><a href="/contact">Contact Us</a></li>
+								<li><a href="/collection">Collection</a></li>
 							</ul>
 							<div class="share-btn social-profile"><!-- start place btn -->
 								<ul class="share-icon-list social-list">
 									<li class="nav-item">
-										<a href="#" class="share-icon1"><i class="bx bxl-facebook"></i></a>
-									</li>
-									<li class="nav-item">
-										<a href="#" class="share-icon2"><i class="bx bxl-linkedin"></i></a>
+										<a href="#" class="share-icon2"><i class="bx bxl-telegram"></i></a>
 									</li>
 									<li class="nav-item">
 										<a href="#" class="share-icon3"><i class="bx bxl-twitter"></i></a>
@@ -171,7 +167,7 @@
 						</div>
 					</div>
 				</div> <!-- end col-3 -->
-				<div class="col-md-3 col-sm-6"> <!-- col-3 -->
+				<div class="col-md-4 col-sm-6"> <!-- col-3 -->
 					<div class="footer_widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
 						<div class="widget_title">
 							<h6>Resource</h6>
@@ -187,7 +183,7 @@
 						</div>
 					</div>
 				</div> <!-- end col-3 -->
-				<div class="col-md-3 col-sm-6"> <!-- col-3 -->
+				<div class="col-md-4 col-sm-6"> <!-- col-3 -->
 					<div class="footer_widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 						<div class="widget_title">
 							<h6>Marketplace</h6>
@@ -198,26 +194,7 @@
 								<li><a href="#">NFT Product</a></li>
 								<li><a href="#">Virtual World</a></li>
 								<li><a href="#">Popular Art</a></li>
-								<li><a href="#">Domain Names</a></li>
 							</ul>
-						</div>
-					</div>
-				</div> <!-- end col-3 -->
-				<div class="col-md-3 col-sm-6"> <!-- col-3 -->
-					<div class="footer_widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-						<div class="widget_title">
-							<h6>Subscribe Now</h6>
-						</div>						
-						<div class="widget_nav_link">
-							<p class="subscribe-text">If you want to get notified, please subscribe us so that we can easily touch you.</p>
-							<div class="email-input">
-								<form action="https://themetum.com/tf/etherino/etherino-light/contact.php">
-									<div class="form-group">
-										<input placeholder="Email here..." class="form-control" id="subscribe">
-										<button class="btn btn-subscribe" type="submit">Notify</button>
-									</div>
-								</form>
-							</div>	
 						</div>
 					</div>
 				</div> <!-- end col-3 -->				
@@ -227,7 +204,7 @@
 			<div class="row wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s"> <!-- start row -->
 				<div class="col-md-12 text-center  col-sm-12"> <!-- col-3 footer copyright -->
 					<div class="footer_copyright">
-						<p class="copyright_text text-center">Copyright © 2021. All rights reserved & designed by <span><a href="#">Etherino</a></span>.</p>
+						<p class="copyright_text text-center">Copyright © 2021. All rights reserved & designed by <span><a href="#">PetaVerse</a></span>.</p>
 					</div>
 				</div><!-- end col-3 footer copyright -->
 			</div><!-- end row -->
