--- a/views/main.hbs
+++ b/views/main.hbs
@@ -25,9 +25,25 @@
 						 </div><!-- end header btn  -->
 					</div><!-- end header left  -->
 				</div> <!-- end col-6  -->
-				<div class="col-md-6 col-sm-12"> <!-- start col-6  -->
+				<div class="col-md-5 offset-md-1 col-sm-12"> <!-- start col-6  -->
 					<div class="header-right wow fadeInRight" data-wow-duration="1s" data-wow-delay=".8s"> 
-						<img src="img/tibut1.jpg" alt="" class="responsive-fluid" />
+						<article class="featured-image-card">
+							<a href="">
+								<img src="img/tibut1.jpg" alt="" class="responsive-fluid featured-image" />
+								<footer class="featured-image-footer">
+									<div class="featured-image-footer">
+										<div size="40" class="featured-author">
+											<img src="img/avatar/7.jpg" alt="Featured Author">
+										</div>
+									</div>
+									<div class="name">
+										<span class="featured-author-name" size="12px">@Ojay</span>
+										<span class="featured-pet-name">Bingo</span>
+									</div>
+								</footer>
+							</a>
+						</article>
+						
 					</div>
 				</div> <!-- end col-7  -->
 			</div> <!-- end row  -->
@@ -231,7 +247,7 @@
 			<div class="row"> <!-- start row -->
 				<div class="col-md-4 col-sm-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s"><!-- start col-4 -->
 					<div class="single_product mt-50 pb-30"> <!-- Single Product -->
-						<div class="jumbotron countdown show" data-Date='2022/09/24 23:59:59' data-endText="Auction ended">					
+						<div class="jumbotron countdown show" data-Date='2021/12/24 23:59:59' data-endText="Auction ended">					
 						    <div class="running">
 								<span class="timer">
 								  <span class="days"></span>d
@@ -243,35 +259,35 @@
 						</div> <!-- end count down -->					
 						<div class="single_product_img"><!-- start single product img -->						
 							<a href="https://www.themetum.com/tf/etherino/etherino-light/product.html" class="theme_preview_link">
-								<img src="img/items/1.jpg" alt="" class="responsive-fluid" />						
+								<img src="img/items/4.jpg" alt="" class="responsive-fluid" />						
 							</a>
 						</div> <!-- End single product img -->
 						<div class="nft_product_description"><!-- start product description -->
 							<div class="nft_product_text">				
 								<ul class="author-profile-link"><!-- start author-->								
 									<li class="nav-item">
-										<a href="author-details.html" class="author_link offline">
-											<img src="img/avatar/1.jpg" alt="author" class="responsive-fluid img-1" />
+										<a href="author-details.html" class="author_link">
+											<img src="img/avatar/4.jpg" alt="author" class="responsive-fluid img-1" />
 											<i class='bx bxs-check-circle'></i>
 										</a>
 										<span class="hover_author_link">
-											<a href="author-details.html" class="author_link_text">@galaxy01</a>
+											<a href="author-details.html" class="author_link_text" title="Collection">@milkyway</a>
 										</span>										
 									</li>						
 									<li class="nav-item">									
-										<a href="author-details.html" class="author_link">
-											<img src="img/avatar/2.jpg" alt="author" class="responsive-fluid img-2" />
+										<a href="author-details.html" class="author_link offline">
+											<img src="img/avatar/5.jpg" alt="author" class="responsive-fluid img-2" />
 											<i class='bx bxs-check-circle'></i>
 										</a>	
 										<span class="hover_author_link">
-											<a href="author-details.html" class="author_link_text">@manila007</a>
+											<a href="author-details.html" class="author_link_text" title="Author">@yanila7</a>
 										</span>								
 									</li>
 								</ul>	
 							</div><!-- end author-->																		
 							<div class="product_title_link"><!-- start product title-->			
 								<a class="product-title" href="#">
-									<h6 class="product_title_intro">Mystetious Robotic Body Art</h6>	
+									<h6 class="product_title_intro">Mystetious Robotic Art</h6>	
 								</a>								
 							</div><!-- end product title-->		
 						</div><!-- end product text -->
@@ -300,7 +316,7 @@
 									</li>
 									<li class="product-all-icon">										
 										<span class="sale-count product-icon">
-												<span class="sale-counter">Unit : 22.5 ETH 1/12</span>	
+												<span class="sale-counter">Unit : 32 ETH 1/8</span>	
 										</span>	
 									</li>										
 							</ul>
@@ -738,15 +754,7 @@
 			<div class="row"><!-- start row -->
 				<div class="col-md-6 col-sm-12 pb-30">
 					<div class="section_intro wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-						<h2 class="section_heading">Our Amazing Authors</h2>
-						<div class="section_description">
-							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Explore on the world's best & largest NFT marketplace with our beautiful NFT products. We want to be a part of your smile. </p>
-						</div>						
-					</div>
-				</div>
-				<div class="col-md-6 float-right col-sm-12">
-					<div class="author-btn">
-						<a href="authors.html" class="btn btn_authors">All Authors <i class="bx bx-arrow-back"></i></a>
+						<h2 class="section_heading">Top collections</h2>					
 					</div>
 				</div>
 			</div><!-- end row -->
@@ -913,6 +921,11 @@
 						</div><!-- end copy icon -->						
 					</div><!-- end single author -->
 				</div><!-- end col -->
+				<div class="col-md-2 float-left">
+					<div class="author-btn">
+						<a href="authors.html" class="btn btn_authors">All Authors <i class="bx bx-arrow-back"></i></a>
+					</div>
+				</div>
 			</div><!-- End row -->
 		</div> <!-- End Container -->
 	</section><!-- end author list area -->
@@ -922,8 +935,8 @@
 			<div class="row"><!-- start row -->
 				<div class="col-md-6 col-sm-12 pb-10">
 					<div class="section_intro wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
-						<p class="section_top_title">NTFs Products</p>
-						<h2 class="section_heading">Features Arworks</h2>
+						<p class="section_top_title">NFTs Products</p>
+						<h2 class="section_heading">Featured Artworks</h2>
 					</div>
 				</div>
 				<div class="col-md-6 col-sm-12">
@@ -1521,30 +1534,6 @@
 		</div> <!-- End container -->
 	</div><!-- End new product slider -->
 	
-	<section class="promo-area"> <!-- start promo area -->
-		<div class="container container-bg"> <!-- start container -->
-			<div class="row"> <!-- start row -->
-				<div class="col-md-6 col-sm-12"> <!-- start col -->
-					<div class="promo-text-area">
-						<div class="promo-title">
-							<h2 class="promo-subtitle pb-10">Start your own collection today with Etherino App</h2>
-							<p class="promo-description">Etherino is a shared liquidity NFT market smart contract which is used by multiple websites to provide the users the best possible experience.</p>
-						</div>
-						<div class="promo-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-							<a href="wallet.html" class="btn btn-wallet btn_all_nft_product mt-20">Google Play <i class='bx bxl-play-store'></i> </a>
-							<a href="wallet.html" class="btn btn-wallet btn_all_nft_product mt-20">Apple Store<i class='bx bxl-apple'></i></a>						
-						</div>
-					</div>
-				</div> <!-- end col -->
-				<div class="col-md-6 col-sm-12"> <!-- start col -->
-					<div class="image-right wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
-						<img src="img/main/3.png" alt="promo" class="responsive-fluid" />
-					</div>
-				</div> <!-- end col -->
-			</div> <!-- end row -->
-		</div> <!-- end container -->
-	</section>  <!-- end promo area -->
-	
 	<div id="how-works" class="how-work-area pt-80 pb-80"><!-- start how work -->		
 		<div class="container"><!-- start container -->
 			<div class="row"><!-- start row -->
@@ -1599,11 +1588,6 @@
 					<div class="section_intro wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
 						<p class="section_top_title">Collection</p>
 						<h2 class="section_heading">Collection Resources</h2>
-					</div>
-				</div>
-				<div class="col-md-6 col-sm-12">
-					<div class="section_description">
-						<p class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".5s"> Once you’ve set up your wallet of choice, please let you connect it to NFT Marketplace in the top right corner. Learn about the wallets we support. </p>
 					</div>
 				</div>
 			</div><!-- end row -->
@@ -1700,7 +1684,7 @@
 					</div><!-- end product link -->								
 				</div><!-- end Single Product -->	
 				<div class="single_product item_collection mt-50 pb-30"> <!-- Single Product -->
-					<div class="jumbotron countdown show" data-Date='2021/10/24 23:59:59' data-endText="Auction ended">					
+					<div class="jumbotron countdown show" data-Date='2021/3/24 23:59:59' data-endText="Auction ended">					
 						<div class="running">
 							<span class="timer">
 							  <span class="days"></span>d
