--- a/public/css/style.css
+++ b/public/css/style.css
@@ -386,14 +386,14 @@
 	3.NAVBAR CSS
 ===========================*/
 .menu {
-    margin-right: 2rem;
+    margin-left: 4rem;
 }
 .main-menu .logo {
     padding-left: 3%;
 }
 .input-main {
     position: relative;
-	margin-left:5%;
+	margin-left:15%;
 }
 .input-main button {
     position: absolute;
@@ -855,14 +855,13 @@ select#language\ right-space option {
 }
 
 .header-right {
-		padding-top: 150px;
+		padding-top: 200px;
 		margin-left: 1%;
 		margin-right: 1%;
 	}
 	.header-right img {
-		border-radius: 2rem;
+		border-radius: 1rem 1rem 0 0;
 		/* transform: rotate(-6deg); */
-        margin-top: 2rem;
 	}
 	#hero-slider-area {
 		position: relative;
@@ -1148,6 +1147,7 @@ button#btn_copy {
 }
 .profile-nav-main {
     margin-top: 0.3rem;
+    margin-left: 3rem;
 }
 .action-nav .profile-nav-main .profile-pop-otr {
     position: absolute;
@@ -1524,8 +1524,9 @@ timer {
     border: 1px solid var(--light-color);
     color: var(--nav-color);
     padding: 8px 14px;
-    width: 185px;
-    border-radius: 4rem;
+    width: 133px;
+    font-size: 12px;
+    border-radius: 2rem;
     margin-left: .7rem;
     margin-top: 1rem;
 }
@@ -4640,22 +4641,79 @@ a.arrow-wallet i {
 	z-index: -1111;
 }
 
+.featured-image-card {
+    width: 100%;
+    background-color: rgb(251, 253, 255);
+    flex-direction: column;
+    border-radius: 1rem 1rem 0 0;
+    z-index: 2;
+    box-shadow: rgb(4 17 29 / 25%) 0px 0px 10px 0px;
+}
 
+.featured-image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
 
+.featured-image-footer {
+    padding: 5px;
+    color: rgb(53, 56, 64);
+    text-align: left;
+    display: flex;
+    border: none;
+}
 
+.featured-author {
+    align-self: center;
+    order: 2;
+    margin-right: 16px;
+    flex-shrink: 0;
+    overflow: hidden;
+    border-radius: 50%;
+    padding: 0px;
+    -webkit-box-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+}
+.featured-author img {
+    border-radius: 0 !important;
+}
 
+.featured-image-name {
+    align-self: stretch;
+    flex: 1 1 auto;
+    flex-flow: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    margin-right: 16px;
+    order: 3;
+    overflow: hidden;
+    font-size: 16px;
+    align-items: flex-start;
+    display: flex;
+}
 
+.featured-author-name {
+    font-weight: 600;
+    font-size: 14px;
+    color: rgb(4, 17, 29);
+    display: flex;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.featured-pet-name {
+    font-weight: 600;
+    font-size: 13px;
+    text-transform: uppercase;
+}
